compiler/testData/diagnostics/tests/annotations/InheritingAnnotationClass.fir.kt
// RUN_PIPELINE_TILL: SOURCE
annotation class AnnKlass

class Child : <!FINAL_SUPERTYPE!>AnnKlass<!>
